Tiny wrapping issue resolved with an inline-block

--- a/hacker-news-y-combinator.css
+++ b/hacker-news-y-combinator.css
@@ -84,7 +84,7 @@ table.itemlist tr {
 	position: relative;
 }
 table.itemlist tr * {
-	display: inline;
+	display: inline-block;
 }
 
 /* Hide the redundant nodes being used for spacing purposes. */
@@ -351,11 +351,12 @@ table.comment-tree span.age a {
 	padding-right: 0.5em;
 }
 
+/* A line-height of 18pt is easier to read. */
 div.comment {
 	line-height: 18pt;
 }
 
-/* italic text in comments is probably quotes so de-emphasise them a bit. */
+/* Italic text in comments is probably quotes so de-emphasise them a bit. */
 table.comment-tree i {
 	color: #999 !important;
 }
